# rofi-nerd-font-glyphs-selector

./: .gitignore  CMakeLists.txt  README.md
modules/: glob_sources.cmake
src/: glyph.cpp  glyph.h  plugin.cpp  utils.cpp  utils.h
